Update: 1. fix swagger not showing 2. add method role based for /products